# geotaste

./: .gitignore  .readthedocs.yaml  Procfile  README.md  assets  build.spec  config_default.json  dev-requirements.txt  pyproject.toml  requirements.txt  run.py  run.sh  setup.cfg  wsgi.py
app/: app.ipynb  app.py  app_callbacks.py  app_components.py  app_data.py  app_figs.py  app_imports.py  app_layout.py  app_paths.py  app_utils.py  app_widgets.py  launch.sh
cache/: cache.db  cache.db-shm  cache.db-wal
data/: arrondissements.geojson  books.csv  landmarks.csv
docs/: conf.py  index.rst  requirements.txt
geotaste/: __init__.py  app.py  arronds.py  authors.py  books.py  choices.py  combined.py  components.py  datasets.py  dwellings.py  events.py  figs.py  geotaste.py  gui.py  imports.py  layout.py  layouts.py  maps.py  panels.py  people.py  queries.py  querystrings.py  statutils.py  utils.py  views.py
geotaste2/: app.py  components.py  datasets.py  figs.py  imports.py  layouts.py  panels.py  queries.py  utils.py
notebooks/: 2023-01-31. Joining data, messing around.ipynb  2023-02-02. Saving joined data.ipynb  2023-02-09. Analysis 1 - Step 1 - Preparing.ipynb  2023-02-10. Analysis 1 - Step 2 - Modularizing.ipynb  2023-02-21.ipynb  2023-02-22.ipynb  2023-02-23--Distances.ipynb  2023-02-23.ipynb  2023-03-02. GeoJSONS.ipynb  2023-03-02. Juxtaposing.ipynb  2023-03-09--Comparator.ipynb  2023-04-05. Adding location data.ipynb  2023-04-06. Assessing data changes.ipynb  2023-04-12. Adding location data.ipynb  2023-04-13. Finishing data synthesis.ipynb  (+21 more)
tests/: test_app.py  (+7 more)
(+100 files in other folders)
