[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "geotaste"
requires-python = ">=3.8.2"
authors = [
    { name = "Ryan Heuser", email = "ryan.heuser@princeton.edu" },
    { name = "The Center for Digital Humanities at Princeton", email = "cdhdevteam@princeton.edu" },
]
description = "Geography of Taste, part of the Shakespeare & Co Project"
readme = "README.md"
license = { file = "LICENSE" }
dynamic = ["version", "dependencies","optional-dependencies"]
urls = { "Homepage" = "https://github.com/Princeton-CDH/geotaste", "Project Home" = "https://cdh.princeton.edu/", "Bug Tracker" = "https://github.com/Princeton-CDH/geotaste/issues" }
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
scripts = { geotaste-app = "geotaste.app:run" }

[tool.setuptools]
packages = ['geotaste']

[tool.setuptools.dynamic]
version = {attr = "version.__version__"}
dependencies = {file = "requirements.txt"}
optional-dependencies.dev = { file = "dev-requirements.txt"}
